--- a/brainfuck.cabal
+++ b/brainfuck.cabal
@@ -22,7 +22,9 @@ executable brainfuck
                        Brainfuck.Parse,
                        Brainfuck.State,
                        Brainfuck.Types
+  ghc-options:         -pgmL markdown-unlit
   build-depends:       base >= 4.7 && < 5
                      , parsec >= 3.1.11
                      , containers
                      , vector
+                     , markdown-unlit >= 0.4.0
